@@ -163,6 +163,18 @@ import|;
 end_import
 
 begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|spy
+import|;
+end_import
+
+begin_import
 import|import
 name|java
 operator|.
@@ -221,6 +233,20 @@ operator|.
 name|conf
 operator|.
 name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|UserGroupInformation
 import|;
 end_import
 
@@ -1231,6 +1257,41 @@ specifier|private
 name|RMAppAttempt
 name|applicationAttempt
 decl_stmt|;
+DECL|field|conf
+specifier|private
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+DECL|field|amRMTokenManager
+specifier|private
+name|AMRMTokenSecretManager
+name|amRMTokenManager
+init|=
+name|spy
+argument_list|(
+operator|new
+name|AMRMTokenSecretManager
+argument_list|(
+name|conf
+argument_list|)
+argument_list|)
+decl_stmt|;
+DECL|field|clientToAMTokenManager
+specifier|private
+name|ClientToAMTokenSecretManagerInRM
+name|clientToAMTokenManager
+init|=
+name|spy
+argument_list|(
+operator|new
+name|ClientToAMTokenSecretManagerInRM
+argument_list|()
+argument_list|)
+decl_stmt|;
 DECL|class|TestApplicationAttemptEventDispatcher
 specifier|private
 specifier|final
@@ -1511,13 +1572,6 @@ operator|.
 name|class
 argument_list|)
 expr_stmt|;
-name|Configuration
-name|conf
-init|=
-operator|new
-name|Configuration
-argument_list|()
-decl_stmt|;
 name|rmContext
 operator|=
 operator|new
@@ -1533,11 +1587,7 @@ name|amFinishingMonitor
 argument_list|,
 literal|null
 argument_list|,
-operator|new
-name|AMRMTokenSecretManager
-argument_list|(
-name|conf
-argument_list|)
+name|amRMTokenManager
 argument_list|,
 operator|new
 name|RMContainerTokenSecretManager
@@ -1551,9 +1601,7 @@ argument_list|(
 name|conf
 argument_list|)
 argument_list|,
-operator|new
-name|ClientToAMTokenSecretManagerInRM
-argument_list|()
+name|clientToAMTokenManager
 argument_list|)
 expr_stmt|;
 name|RMStateStore
@@ -2109,6 +2157,36 @@ name|getFinalApplicationStatus
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|UserGroupInformation
+operator|.
+name|isSecurityEnabled
+argument_list|()
+condition|)
+block|{
+name|verify
+argument_list|(
+name|clientToAMTokenManager
+argument_list|)
+operator|.
+name|registerApplication
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|assertNotNull
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAMRMToken
+argument_list|()
+argument_list|)
+expr_stmt|;
 comment|// Check events
 name|verify
 argument_list|(
@@ -2259,6 +2337,16 @@ name|class
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|verifyTokenCount
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * {@link RMAppAttemptState#KILLED}    */
 DECL|method|testAppAttemptKilledState (Container amContainer, String diagnostics)
@@ -2352,6 +2440,16 @@ name|applicationAttempt
 operator|.
 name|getFinalApplicationStatus
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|verifyTokenCount
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+literal|1
 argument_list|)
 expr_stmt|;
 block|}
@@ -2763,6 +2861,16 @@ name|class
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|verifyTokenCount
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * {@link RMAppAttemptState#LAUNCH}    */
 DECL|method|testAppAttemptLaunchedState (Container container)
@@ -2968,6 +3076,16 @@ name|getFinalApplicationStatus
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|verifyTokenCount
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * {@link RMAppAttemptState#FINISHED}    */
 DECL|method|testAppAttemptFinishedState (Container container, FinalApplicationStatus finalStatus, String trackingUrl, String diagnostics, int finishedContainerCount)
@@ -3067,6 +3185,16 @@ name|applicationAttempt
 operator|.
 name|getFinalApplicationStatus
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|verifyTokenCount
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+literal|1
 argument_list|)
 expr_stmt|;
 block|}
@@ -3763,6 +3891,16 @@ argument_list|,
 name|EMPTY_DIAGNOSTICS
 argument_list|)
 expr_stmt|;
+name|verifyTokenCount
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -4060,6 +4198,16 @@ name|applicationAttempt
 operator|.
 name|getAppAttemptState
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|verifyTokenCount
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+literal|1
 argument_list|)
 expr_stmt|;
 block|}
@@ -4370,6 +4518,16 @@ name|getTrackingUrl
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|verifyTokenCount
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -4478,6 +4636,16 @@ name|applicationAttempt
 operator|.
 name|getTrackingUrl
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|verifyTokenCount
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+literal|1
 argument_list|)
 expr_stmt|;
 block|}
@@ -4599,6 +4767,16 @@ name|applicationAttempt
 operator|.
 name|getTrackingUrl
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|verifyTokenCount
+argument_list|(
+name|applicationAttempt
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+literal|1
 argument_list|)
 expr_stmt|;
 block|}
@@ -5112,6 +5290,58 @@ argument_list|,
 literal|0
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|verifyTokenCount (ApplicationAttemptId appAttemptId, int count)
+specifier|private
+name|void
+name|verifyTokenCount
+parameter_list|(
+name|ApplicationAttemptId
+name|appAttemptId
+parameter_list|,
+name|int
+name|count
+parameter_list|)
+block|{
+name|verify
+argument_list|(
+name|amRMTokenManager
+argument_list|,
+name|times
+argument_list|(
+name|count
+argument_list|)
+argument_list|)
+operator|.
+name|applicationMasterFinished
+argument_list|(
+name|appAttemptId
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|UserGroupInformation
+operator|.
+name|isSecurityEnabled
+argument_list|()
+condition|)
+block|{
+name|verify
+argument_list|(
+name|clientToAMTokenManager
+argument_list|,
+name|times
+argument_list|(
+name|count
+argument_list|)
+argument_list|)
+operator|.
+name|unRegisterApplication
+argument_list|(
+name|appAttemptId
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
