@@ -290,6 +290,42 @@ name|api
 operator|.
 name|records
 operator|.
+name|ContainerState
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ContainerStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
 name|FinalApplicationStatus
 import|;
 end_import
@@ -425,6 +461,48 @@ operator|.
 name|attempt
 operator|.
 name|RMAppAttempt
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|resourcemanager
+operator|.
+name|rmapp
+operator|.
+name|attempt
+operator|.
+name|event
+operator|.
+name|RMAppAttemptContainerFinishedEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|utils
+operator|.
+name|BuilderUtils
 import|;
 end_import
 
@@ -619,6 +697,11 @@ argument_list|)
 expr_stmt|;
 block|}
 comment|/**    * Validate that application tokens are unusable after the    * application-finishes.    *     * @throws Exception    */
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
 annotation|@
 name|Test
 DECL|method|testTokenExpiry ()
@@ -901,6 +984,55 @@ operator|.
 name|finishApplicationMaster
 argument_list|(
 name|finishAMRequest
+argument_list|)
+expr_stmt|;
+comment|// Send RMAppAttemptEventType.CONTAINER_FINISHED to transit RMAppAttempt
+comment|// from Finishing state to Finished State. Both AMRMToken and
+comment|// ClientToAMToken will be removed.
+name|ContainerStatus
+name|containerStatus
+init|=
+name|BuilderUtils
+operator|.
+name|newContainerStatus
+argument_list|(
+name|attempt
+operator|.
+name|getMasterContainer
+argument_list|()
+operator|.
+name|getId
+argument_list|()
+argument_list|,
+name|ContainerState
+operator|.
+name|COMPLETE
+argument_list|,
+literal|"AM Container Finished"
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|rm
+operator|.
+name|getRMContext
+argument_list|()
+operator|.
+name|getDispatcher
+argument_list|()
+operator|.
+name|getEventHandler
+argument_list|()
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|RMAppAttemptContainerFinishedEvent
+argument_list|(
+name|applicationAttemptId
+argument_list|,
+name|containerStatus
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// Now simulate trying to allocate. RPC call itself should throw auth
